Replace deprecated new URL constructors in appserv-tests admin/connector/deployment devtests
Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>